<resources>
    <string name="app_name" translatable="false">ShutdownSMS</string>
    <string name="toggle_text_btn">Toggle ShutdownSMS ON or OFF</string>
    <string name="info_text">If ShutdownSMS is ON, your device will be shut down  if it receives the predefined SMS message bellow. If it is OFF, nothing will happen upon receive of this message.</string>
    <string name="change_sms_text">SMS message to be recognized</string>
    <string name="confirm_btn_text">Confirm</string>
    <string name="preferences_file" translatable="false">Preferences</string>
    <string name="toggle_btn_preference" translatable="false">toggle_btn</string>
    <string name="root_not_installed_msg">Root access is not installed on your device. You can\'t use this app without it.</string>
    <string name="root_denied_msg">Root access is installed but was denied. Please, grant it to use the app.</string>
    <string name="sms_text_preference" translatable="false">sms_text</string>
    <string name="undefined_sms_text" translatable="false">undefined</string>
    <string name="permission_denied_text" translatable="false">Permission denied</string>
    <string name="sms_unchanged_msg">SMS text unchanged</string>
    <string name="sms_changed_msg1">SMS text changed from \"</string>
    <string name="sms_changed_msg2">\" to \"</string>
    <string name="toggle_on" translatable="false">On</string>
    <string name="toggle_off" translatable="false">Off</string>
</resources>